--- a/jpamysql/src/main/resources/application.properties
+++ b/jpamysql/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/jaydb
 spring.datasource.username=jay
-spring.datasource.password=jay
+spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
