rest proj added

--- a/jpamysql/pom.xml
+++ b/jpamysql/pom.xml
@@ -35,9 +35,9 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 		</dependency>
 
-		<dependency>
+<!-- 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-		</dependency>
+		</dependency> -->
 	</dependencies>
 </project>
