--- a/jpamysql/pom.xml
+++ b/jpamysql/pom.xml
@@ -4,7 +4,10 @@
 	<groupId>com.jai.springboot</groupId>
 	<artifactId>jpamysql</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+    <modules>
+        <module>../crud_postgres</module>
+    </modules>
+    <packaging>pom</packaging>
 
 	<name>jpamysql</name>
 	<url>http://maven.apache.org</url>
