--- a/crud_postgres/pom.xml
+++ b/crud_postgres/pom.xml
@@ -7,15 +7,15 @@
     <groupId>com.jai.springboot.crud_postgres</groupId>
     <artifactId>crud_postgres</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-<properties>
-    <!--2.1.3.RELEASE-->
-        <spring.boot.version>1.5.7.RELEASE</spring.boot.version>
-</properties>
+    <properties>
+        <spring.boot.version>2.1.2.RELEASE</spring.boot.version>
+        <!--<spring.boot.version>1.5.19.RELEASE</spring.boot.version>-->
+    </properties>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>${spring.boot.version}</version>
+        <version>2.1.2.RELEASE</version>
     </parent>
 
 
@@ -32,17 +32,33 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/postgresql/postgresql -->
-        <dependency>
-            <groupId>postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>9.1-901-1.jdbc4</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.postgresql</groupId>-->
+            <!--<artifactId>postgresql</artifactId>-->
+            <!--<version>9.4-1206-jdbc42</version>-->
+        <!--</dependency>-->
 
+        <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+        <!--<dependency>-->
+            <!--<groupId>org.postgresql</groupId>-->
+            <!--<artifactId>postgresql</artifactId>-->
+            <!--<version>42.2.5</version>-->
+        <!--</dependency>-->
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
 
     </dependencies>
 </project>
