--- a/crud_postgres/pom.xml
+++ b/crud_postgres/pom.xml
@@ -41,6 +41,15 @@
             <optional>true</optional>
         </dependency>
 
+
+        <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.197</version>
+            <scope>test</scope>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/postgresql/postgresql -->
         <!--<dependency>-->
             <!--<groupId>org.postgresql</groupId>-->
