--- a/crud-aws-mssql/pom.xml
+++ b/crud-aws-mssql/pom.xml
@@ -33,11 +33,11 @@
             <artifactId>spring-boot-devtools</artifactId>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/sqljdbc4 -->
+        <!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc -->
         <dependency>
             <groupId>com.microsoft.sqlserver</groupId>
-            <artifactId>sqljdbc4</artifactId>
-            <version>4.0</version>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>7.3.1.jre8-preview</version>
             <scope>test</scope>
         </dependency>
 
