--- a/crud-aws-mssql/pom.xml
+++ b/crud-aws-mssql/pom.xml
@@ -41,6 +41,13 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.6</version>
+        </dependency>
+
 
     </dependencies>
 </project>
