--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ crud-aws-mssql/src/main/resources/application\.properties
 crud-aws-mssql/src/main/resources/application-mssql\.properties
 
 crud-aws-mssql/src/main/resources/application-postgres.properties
+
+crud-aws-mssql/src/main/resources/application-mysql.properties
