--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@ crud-aws-mssql/src/main/resources/application-mssql\.properties
 crud-aws-mssql/src/main/resources/application-postgres.properties
 
 crud-aws-mssql/src/main/resources/application-mysql.properties
+
+crud-aws-mssql/src/main/resources/application-mysql.yml
+
+crud-aws-mssql/src/main/resources/application-mysql.properties
