--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ crud-aws-mssql/src/main/resources/application-mysql.yml
 crud-aws-mssql/src/main/resources/application-mysql.properties
 
 crud-aws-mssql/src/main/resources/application-mssql.yml
+
+crud-aws-mssql/src/main/resources/application-maria.yml
