--- a/crud-aws-mssql/pom.xml
+++ b/crud-aws-mssql/pom.xml
@@ -55,6 +55,13 @@
             <version>42.2.6</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client -->
+        <dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>2.4.2</version>
+        </dependency>
+
 
     </dependencies>
 </project>
