--- a/crud-mysql/pom.xml
+++ b/crud-mysql/pom.xml
@@ -14,6 +14,10 @@
         <version>2.1.6.RELEASE</version>
     </parent>
 
+    <properties>
+        <java.version>1.8</java.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
