docker enabled for crud

--- a/crud/Dockerfile
+++ b/crud/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk
 MAINTAINER Jay Jay
-ARG JAR_FILE
-COPY ${JAR_FILE} crud-0.0.1-SNAPSHOT.jar
-ENTRYPOINT ["java", "-jar", "/crud-0.0.1-SNAPSHOT.jar"]
+ADD "target/crud-0.0.1-SNAPSHOT.jar" "/app.jar"
+EXPOSE 8080:8080
+ENTRYPOINT ["java", "-jar", "/app.jar"]
