--- a/crud-mysql/src/main/resources/application.yml
+++ b/crud-mysql/src/main/resources/application.yml
@@ -6,9 +6,13 @@ spring:
 
   jpa:
     show-sql: false
-
     hibernate:
       ddl-auto: update
+
+  output:
+    ansi:
+      enabled: ALWAYS
+
 
 #  cache:
 #    type: redis
