--- a/config-server/src/main/resources/bootstrap.properties
+++ b/config-server/src/main/resources/bootstrap.properties
@@ -2,7 +2,10 @@
 server.port=8888
 
 #Git repo location.
-spring.cloud.config.server.git.uri=C:/Git_Jay/config-server-repo
+#spring.cloud.config.server.git.uri=C:/Git_Jay/config-server-repo
+#spring.cloud.config.server.git.uri=/Users/jay/git_jay/config-server-repo
+spring.cloud.config.server.git.uri=https://github.com/jjayaraman/config-server-repo
+spring.cloud.config.server.git.clone-on-start=true
 
 #Disable security of the Management endpoint for development. Enable security for production
 management.security.enabled=false
